--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,7 +10,7 @@
 <body>
   <h1>Search <%=shopData.shopName%>
   </h1>
-  <form action="/books/search-result" method="GET">
+  <form action="/books/searchresults" method="GET">
     <p>What book do you want?</p>
     <input id="search-box" type="text" name="keyword">
     <input type="submit" value="Search">
