--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,12 @@
 <body>
   <h1>Welcome to <%=shopData.shopName%>
   </h1>
-  <p><a href="about">About <%=shopData.shopName%></a></p>
-  <p><a href="books/search">Search for books</a></p>
-  <p><a href="users/register">Register with us</a></p>
-  <p><a href="books/addbook">Add a new book</a></p>
-  <p><a href="books/list">List of books</a></p>
-  <p><a href="users/logout"></a>Logout</a></p>
+  <p><a href="/about">About <%=shopData.shopName%></a></p>
+  <p><a href="/books/search">Search for books</a></p>
+  <p><a href="/users/register">Register with us</a></p>
+  <p><a href="/books/addbook">Add a new book</a></p>
+  <p><a href="/books/list">List of books</a></p>
+  <p><a href="/users/logout"></a>Logout</a></p>
 </body>
 
 </html>
